0.0.6 Release
=============

 * Ensure new files to be saved are stored as real files and not
   symlinks. E.G. we used to replace all files in the RAM disk with
   symlinks to $MOUNTPOUNT/<file> for space / version considerations.
   Now files listed in SAVE will be copied so cfg commit does the
   right thing.

0.0.5 Release
=============

 * Add cfgd daemon, which listens to file modifications through
   inotify and runs cfg commit after a specified timeout.
   Related to this, cfg now has a force subcommand, to tell the daemon
   to do a commit now (alternatively you can send a -SIGHUP to it).

 * Work around shell globbing issue with symlink generation on startup.

0.0.4 Release
=============

 * Invert save logic, so only files explicitly defined in the
   configuration file are saved in the flash instead of the entire
   directory.  This makes it easier to handle the situations where
   only a limited number of files needs to be saved, and where the
   base (read-only) directory structure might evolve over time.

   The flash format is backwards compatible, but there's two
   user-visible changes to the configuration file:

     - The MOUNTPOINT setting is no longer optional
     - The SAVE setting has to be set to the list of file names to save
       (shell wildcards are allowed)

0.0.3 Release
=============

 * Support platform specific on_setup handler.

0.0.2 Release
=============

 * Support remounting underlying static contents somewhere else.

0.0.1 Release
=============

 * First release!